corrected the alignment for the mobile app

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -84,6 +84,6 @@
 @media(max-width:576px){
     .navbar-footer-login{
       position: relative;
-      top:60px;
+      top:70px;
     }
 }
